# makepad-site

./: .gitignore  .gitmodules  Cargo.toml  LICENSE  README.md  build-frontend.sh  spin.toml
data/: config.json  page_about.json  page_home.json  page_products.json
frontend/: Cargo.toml  README.md
frontend/src/: app.rs  lib.rs  main.rs  ui.rs
src/: lib.rs
static-server/: spin_static_fs.wasm
webroot/: index.html
