[package]
name = "makepad-site-frontend"
version = "0.1.0"
authors = ["John Gildred <274078+jgildred@users.noreply.github.com>"]
edition = "2021"
description = "Web site template frontend using Makepad"
license = "MIT"
metadata.makepad-auto-version = "db3R5Gxh5Njhx8E-8kuZ2plQ1AI="

[dependencies]
#makepad-widgets = "0.6.0" this may be too old
makepad-widgets = { path = "../../makepad/widgets", version = "0.6.0" }
